# masterfile

./: .gitignore  LICENSE  README.md  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/workflows/: pythonpackage.yml
masterfile/: __init__.py  _metadata.py  annotator.py  dictionary.py  errors.py  formatters.py  masterfile.py  validator.py
masterfile/scripts/: create.py  extract.py  join.py  masterfile.py  pretty.py  text_to_dos.py  validate.py
masterfile/validators/: column_format.py  components_in_dictionary.py  dictionary_format.py  duplicate_column.py  index_column.py  io.py
src/masterfile/: __init__.py  _metadata.py  annotator.py  dictionary.py  errors.py  formatters.py  masterfile.py  validator.py
src/masterfile/scripts/: create.py  extract.py  extract_masterfile_data.py  join.py  make_blank_dictionary.py  make_joined_data.py  make_pretty_dictionary.py  masterfile.py  pretty.py  text_to_dos.py  (+2 more)
tests/: conftest.py  test_annotator.py  test_dictionary.py  test_errors.py  test_extract_masterfile_data.py  test_formatters.py  test_make_blank_dictionary.py  test_make_joined_data.py  test_masterfile.py  test_validator.py
tests/examples/: foo_input.csv
tests/scripts/: test_extract_masterfile_data.py  test_make_blank_dictionary.py  test_make_joined_data.py  test_make_pretty_dictionary.py  test_validate_masterfile.py
tests/validators/: test_column_format.py  test_components_in_dictionary.py  test_dictionary_format.py  test_duplicate_column.py  test_index_column.py  test_index_column_validator.py  test_io.py  test_io_validator.py
(+22 files in other folders)
