[metadata]
name = masterfile
url = https://github.com/uwmadison-chm/masterfile
download_url = https://github.com/uwmadison-chm/masterfile/releases
author = Nate Vack
author_email = njvack@wisc.edu
maintainer = Nate Vack
maintainer_email = njvack@wisc.edu
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Information Analysis
license = MIT License
description = Tools to organize, document, and validate the variables of interest in scientific studies
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides = masterfile

[options]
install_requires =
    pandas >= 0.9
    attrs >= 17.0
    schema >= 0.2

zip_safe = False
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    masterfile=masterfile.scripts.masterfile:main

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
